1.7.40 FIXED: build of command line tool documentation.
       IMPROVED: error recovery in msys.LoadMany (yield None on bad entry)
       IMPROVED: dms-validate checks for nonzero volume.

1.7.39 treetop/57-Anton2

1.7.38 IMPROVED: dms-select replaced its --append option with support for
                 multiple input files.
       IMPROVED: Compilation improvements.
                
1.7.37 IMPROVED: PDB reader guesses atomic number form name if element is
                 missing.  END and ENDMDL records split PDB into cts.
       IMPROVED: PDB reader and writer handle formal charge in columns 79-80.
       IMPROVED: dms-select has -A/--assign option to assign formal charge
                 and bond order.
       NEW: dms-tile and dms-replicate scripts.

1.7.35 FIXED: dms-dump truncated its fields to 10 characters; now output
              is separated by '|' rather than being formatted into columns.

1.7.34 IMPROVED: annotated system is now handles radicals 
                 (bond order assigner still does not)

1.7.33 FIXED: SDF counts line specification

1.7.32 FIXED: SDF exporter writes ct key-values.

1.7.31 FIXED: Read MAE files with fields containing hash symbols.
       NEW: Atommatch takes optional pair of atoms which must be matched.

1.7.30 FIXED: Another maegz fix.

1.7.29 FIXED: MAE export was confused by bonds to pseudos.
       FIXED: Bad image filename for latex2pdf documentation.
    
1.7.28 FIXED: Handle MAE files with m2io_version block at the end.

1.7.27 FIXED: Documentation of command line tools matches result of -h.
       FIXED: SaveMAE supports lists of Systems again.
       FIXED: dms-find-knot finds knots crossing periodic boundaries.
       IMPROVED: dms-find-knot is much faster.
       NEW: SerializeMAE instead of SaveMAE(path=None) for MAE contents.
       NEW: XYZ file export.
       NEW: dms-posre takes --max-energy and --max-distance options.
       FIXED: dms-grease puts lipids in their own ct, leaving chains unchanged.
