@@ -26,6 +26,12 @@ def main():
             help="thermalization temperature in Kelvin")
     parser.add_option('-s', '--seed', default='1',
             help="Random seed, or 'random' to get a random random seed")
+    parser.add_option('--remove-drift', action='store_true', default=False,
+            help="Remove center of mass motion from assigned velocities")
+    parser.add_option('--no-remove-drift', action='store_false',
+            dest='remove_drift',
+            help="Do not remove center of mass motion from assigned velocities")
+
         
     opts, args = parser.parse_args()
     if len(args)!=2:
@@ -44,6 +50,10 @@ def main():
         seed=int(seed)
 
     thermalize.apply(mol, opts.temperature, seed)
+
+    if opts.remove_drift:
+        print "Removing center of mass motion"
+        thermalize.remove_drift(mol)
 
     print "Writing DMS file <%s>" % args[1]
     msys.SaveDMS(mol,args[1])
